{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 413,
  "lineage": "c2eb9b1a-89a3-712c-d63b-e8c026135aac",
  "resources": [
    {
      "module": "module.my_eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.my_eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:security-group/sg-003297fb81ac31214",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-003297fb81ac31214",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053d7c9889e47e3ec"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my_eks_cluster-cluster-20240108220736861900000008",
            "name_prefix": "my_eks_cluster-cluster-",
            "owner_id": "881666630512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_eks_cluster-cluster"
            },
            "tags_all": {
              "Name": "my_eks_cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.my_eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:security-group/sg-053d7c9889e47e3ec",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053d7c9889e47e3ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003297fb81ac31214"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my_eks_cluster-node-20240108220736880300000009",
            "name_prefix": "my_eks_cluster-node-",
            "owner_id": "881666630512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_eks_cluster-node",
              "kubernetes.io/cluster/my_eks_cluster": "owned"
            },
            "tags_all": {
              "Name": "my_eks_cluster-node",
              "kubernetes.io/cluster/my_eks_cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.my_eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1756606810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003297fb81ac31214",
            "security_group_rule_id": "sgr-02b39d6f9738e38ba",
            "self": false,
            "source_security_group_id": "sg-053d7c9889e47e3ec",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_eks_cluster.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.my_eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-290032751",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0484573de79cda060",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2664609065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0a0efd57b07632105",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3329777060",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0ef2cdb26f9985da7",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-255474226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0979c5d7ef23d9041",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-476448275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-098ebab895b367879",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2026321368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0fd3d4c2cbb13bcd5",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1575116492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-00f497fdd574a3268",
            "self": false,
            "source_security_group_id": "sg-003297fb81ac31214",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-997000388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-061a5e1c9af241192",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1120563526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0bf96b2d8eb3bff92",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3868578473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-053d7c9889e47e3ec",
            "security_group_rule_id": "sgr-0312d5b0a97457c76",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.cluster",
            "module.my_eks_cluster.module.eks_cluster.aws_security_group.node",
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:network-acl/acl-0a28a17f39ea0aa54",
            "default_network_acl_id": "acl-0a28a17f39ea0aa54",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a28a17f39ea0aa54",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "881666630512",
            "subnet_ids": [],
            "tags": {
              "Name": "p41-vpc-default"
            },
            "tags_all": {
              "Name": "p41-vpc-default"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:route-table/rtb-06f5071bf66535e52",
            "default_route_table_id": "rtb-06f5071bf66535e52",
            "id": "rtb-06f5071bf66535e52",
            "owner_id": "881666630512",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "p41-vpc-default"
            },
            "tags_all": {
              "Name": "p41-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:security-group/sg-0da1846824bc9b533",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0da1846824bc9b533",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "881666630512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "p41-vpc-default"
            },
            "tags_all": {
              "Name": "p41-vpc-default"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4051a826529fd6f",
            "domain": "vpc",
            "id": "eipalloc-0d4051a826529fd6f",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-96-90-48.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.90.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "p41-vpc-ca-central-1a"
            },
            "tags_all": {
              "Name": "p41-vpc-ca-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:internet-gateway/igw-0a6de38e5cc9e0af7",
            "id": "igw-0a6de38e5cc9e0af7",
            "owner_id": "881666630512",
            "tags": {
              "Name": "p41-vpc"
            },
            "tags_all": {
              "Name": "p41-vpc"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4051a826529fd6f",
            "association_id": "eipassoc-0f2f55375cca7215e",
            "connectivity_type": "public",
            "id": "nat-08393be8fe3e559e3",
            "network_interface_id": "eni-0a6f80839f8ef2fe9",
            "private_ip": "192.0.3.69",
            "public_ip": "3.96.90.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f26c359e390f86c",
            "tags": {
              "Name": "p41-vpc-ca-central-1a"
            },
            "tags_all": {
              "Name": "p41-vpc-ca-central-1a"
            }
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_eip.nat",
            "module.my_vpc.module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.module.my_vpc.aws_subnet.public",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8535b145724c5b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08393be8fe3e559e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8535b145724c5b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_eip.nat",
            "module.my_vpc.module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.module.my_vpc.aws_route_table.private",
            "module.my_vpc.module.my_vpc.aws_subnet.public",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6de38e5cc9e0af7",
            "id": "r-rtb-026755bdbaf0d62851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026755bdbaf0d6285",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.module.my_vpc.aws_route_table.public",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:route-table/rtb-0f8535b145724c5b1",
            "id": "rtb-0f8535b145724c5b1",
            "owner_id": "881666630512",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "p41-vpc-private"
            },
            "tags_all": {
              "Name": "p41-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:route-table/rtb-026755bdbaf0d6285",
            "id": "rtb-026755bdbaf0d6285",
            "owner_id": "881666630512",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6de38e5cc9e0af7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "p41-vpc-public"
            },
            "tags_all": {
              "Name": "p41-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0012d7d3689c4506b",
            "route_table_id": "rtb-0f8535b145724c5b1",
            "subnet_id": "subnet-022fbdf37573e0d6c"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_route_table.private",
            "module.my_vpc.module.my_vpc.aws_subnet.private",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a52a011c1f8d487b",
            "route_table_id": "rtb-0f8535b145724c5b1",
            "subnet_id": "subnet-0cd9e5c86f5f6f680"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_route_table.private",
            "module.my_vpc.module.my_vpc.aws_subnet.private",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00841c3376aad2cbe",
            "route_table_id": "rtb-026755bdbaf0d6285",
            "subnet_id": "subnet-02f26c359e390f86c"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_route_table.public",
            "module.my_vpc.module.my_vpc.aws_subnet.public",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0583333d4873c8cba",
            "route_table_id": "rtb-026755bdbaf0d6285",
            "subnet_id": "subnet-0060d2e3f620e5adf"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_route_table.public",
            "module.my_vpc.module.my_vpc.aws_subnet.public",
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:subnet/subnet-022fbdf37573e0d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022fbdf37573e0d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881666630512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p41-vpc-private-ca-central-1a"
            },
            "tags_all": {
              "Name": "p41-vpc-private-ca-central-1a"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:subnet/subnet-0cd9e5c86f5f6f680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd9e5c86f5f6f680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881666630512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p41-vpc-private-ca-central-1b"
            },
            "tags_all": {
              "Name": "p41-vpc-private-ca-central-1b"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:subnet/subnet-02f26c359e390f86c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "192.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f26c359e390f86c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881666630512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p41-vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Name": "p41-vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:subnet/subnet-0060d2e3f620e5adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060d2e3f620e5adf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881666630512",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p41-vpc-public-ca-central-1b"
            },
            "tags_all": {
              "Name": "p41-vpc-public-ca-central-1b"
            },
            "vpc_id": "vpc-03c9fe80178dab9aa"
          },
          "dependencies": [
            "module.my_vpc.module.my_vpc.aws_vpc.this",
            "module.my_vpc.module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc.module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:881666630512:vpc/vpc-03c9fe80178dab9aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0a28a17f39ea0aa54",
            "default_route_table_id": "rtb-06f5071bf66535e52",
            "default_security_group_id": "sg-0da1846824bc9b533",
            "dhcp_options_id": "dopt-07fc7f3b61bb9d571",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c9fe80178dab9aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f5071bf66535e52",
            "owner_id": "881666630512",
            "tags": {
              "Name": "p41-vpc"
            },
            "tags_all": {
              "Name": "p41-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}